# Data_Mining_Assignment1

./: README.md  pyproject.toml
data/basic/: ODI-2025 - adjusted.csv  ODI-2025 - adjusted2.csv  ODI-2025 - adjusted3.csv  ODI-2025.csv  basic_cleaned.csv  basic_engineered.csv  basic_knn_knn.csv  basic_knn_median.csv  basic_manualadj.csv  basic_mode_knn.csv  basic_mode_median.csv  cat-knn_num-knn.csv  cat-knn_num-median.csv  cat-mode_num-knn.csv  cat-mode_num-median.csv  category_summary.csv  category_summary_cleaned.csv  category_summary_engineered.csv  category_summary_interpolated.csv  summary_clean.csv  summary_engineered.csv  summary_engineered_inclbooleans.csv  summary_knn_knn.csv  summary_knn_median.csv  summary_mode_knn.csv  summary_mode_median.csv  summary_noclean.csv
scripts/: linear_regression.py  scpt_knn_class.py  scrpt_combined_regression.py  scrpt_data_analysis.py  scrpt_data_interpolation.py  scrpt_feateng_interp.py  scrpt_feature_engineering.py  scrpt_interpolation.py  scrpt_knn_classification.py  scrpt_logistic_regression.py  scrpt_utils.py  standardization.py
src/: classification.py  data_exploration.py  interpolation.py  regression.py
src/basic/: classification.py  csv_utils_basic.py  data_cleaning_basic.py  data_exploration.py  data_exploration_basic.py  feature_engineering_basic.py  interpolation.py  interpolation_basic.py  plotting_basic.py  regression.py
test/: data_exploration.py
