[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.1"
description = "Data Mining Assignment 1"
authors = [
    { name="Victoria Peterson" },
    { name="Marvin Frommer" },
    { name="Max Bohle" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "scikit-learn"
]

[project.urls]
Home = "https://github.com/marv50/Data_Mining_Assignment1"

[tool.pytest.ini_options]
pythonpath = [
  "."
]